添加icon iconPosition属性 增加按钮灵活性

--- a/index.html
+++ b/index.html
@@ -27,13 +27,23 @@
 </head>
 <body>
    <div id="app">
-      <funk-button />
+      <funk-button icon="#i-settings">
+         点击
+      </funk-button>
+      
+      <funk-button icon="#i-settings" icon-position="right">
+         设置
+      </funk-button>
+      <funk-button>
+         点我
+      </funk-button>
    </div>
-
+   
 
 
 
   
    <script src="./src/app.js"></script>
+   <script src="//at.alicdn.com/t/font_1786271_lapqkqw5vqi.js"></script>
 </body>
 </html>
