限定icon只能为left|right

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
    <div id="app">
-      <funk-button icon="#i-settings">
+      <funk-button icon="#i-settings" icon-position="left">
          点击
       </funk-button>
       
