让input支持v-model双绑

--- a/index.html
+++ b/index.html
@@ -38,13 +38,14 @@
 <body>
    <div id="app">
       <div class="box">
-         <funk-input value='张三'></funk-input>
+         <funk-input value='张三' v-model="msg"></funk-input>
+         {{msg}}
          <funk-input value='李四' disabled></funk-input>
          <funk-input value='王五' readOnly></funk-input>
       </div>
 
       <div class="box">
-         <funk-input value='五' @change='inputChange' error="密码不得少于7个字符"></funk-input>
+         <funk-input  @change='inputChange' error="密码不得少于7个字符"></funk-input>
       </div>
 
 
