添加单元格偏移功能

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
          <funk-col>3</funk-col>
       </funk-row>
       <funk-row>
-         <funk-col span="3">2</funk-col>
-         <funk-col span="21">22</funk-col>
+         <funk-col span="12">10</funk-col>
+         <funk-col span="12" offset='5'>14</funk-col>
       </funk-row>
 
       <hr />
