添加item选中时下边框

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <template slot="actions">
                <button>点击</button>
             </template>
-            <funk-tabs-item name="women"><funk-icon name="#i-settings"></funk-icon>美女</funk-tabs-item>
+            <funk-tabs-item name="women">美女</funk-tabs-item>
             <funk-tabs-item name="finance" disabled>财经</funk-tabs-item>
             <funk-tabs-item name="sports">体育</funk-tabs-item>
          </funk-tabs-head>
