--- a/index.html
+++ b/index.html
@@ -59,13 +59,20 @@
 <body>
    <div id="app" style="padding: 50px 50px;">
 
+      <!-- 测试手风琴 -->
+      <funk-collapse>
+         <funk-collapse-item title='标题1'>内容1</funk-collapse-item>
+         <funk-collapse-item title='标题2'>内容2</funk-collapse-item>
+         <funk-collapse-item title='标题3'>内容3</funk-collapse-item>
+      </funk-collapse>
+
       <!-- 测试popover -->
-      <funk-popover>
+      <!-- <funk-popover>
          <template slot="content">
             <div>这是内容</div>
          </template>
          <button>点击我</button>
-      </funk-popover>
+      </funk-popover> -->
 
 
       <!-- 测试tab -->
