改写:单开逻辑由父组件通知

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
    <div id="app" style="padding: 50px 50px;">
 
       <!-- 测试手风琴 -->
-      <funk-collapse single :selected.sync="selectedTab">
+      <funk-collapse  :selected.sync="selectedTab">
          <funk-collapse-item title='标题1' name="1">内容1内容1内容1</funk-collapse-item>
          <funk-collapse-item title='标题2' name="2">内容2内容2内容2</funk-collapse-item>
-         <funk-collapse-item title='标题3' name="a">内容3内容3内容3</funk-collapse-item>
+         <funk-collapse-item title='标题3' name="3">内容3内容3内容3</funk-collapse-item>
       </funk-collapse>
       {{selectedTab}}
       <!-- 测试popover -->
